tests/NormalTests/paczka1/fuzzy1/18824953.err
Error in line 16: cRd A339 229,0
Error in line 17: cRd A22 85,5
Error in line 14: 5Br7rrQ S525 210,7
